# bitermplus

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: package-publish.yml  package-test.yml  pypi-publish.yml  python-publish.yml  test.yml
bitermplus/: __init__.py  btm.pyx  metrics.py  metrics.pyx  util.py
btm/: __init__.py  btm.pyx  metrics.pyx  utility.py
docs/: Makefile  requirements.txt
docs/source/: benchmarks.rst  bitermplus.metrics.rst  bitermplus.plot.rst  bitermplus.rst  bitermplus.util.rst  conf.py  index.rst  install.rst  sklearn_api.rst  tutorial.rst
src/bitermplus/: __init__.py  _api.py  _btm.pyx  _metrics.pyx  _plot.py  _util.py  btm.pyx  btm_depr.pyx  metrics.py  metrics.pyx  plot.py  util.py
src/tests/: test_btm.py
tests/: __init__.py  test_btm.py  test_btm_classifier.py  test_sklearn_api.py
