[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "bitermplus"
dynamic = ["version"]
description = "Biterm Topic Model"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
authors = [
    { name = "Maksim Terpilovskii", email = "maximtrp@gmail.com" },
]
keywords = [
    "topic model",
    "machine learning", 
    "nlp" 
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: General",
]
urls.homepage = "https://github.com/maximtrp/bitermplus"
urls.documentation = "https://bitermplus.readthedocs.io/"

dependencies = [
    "numpy",
    "cython",
    "pandas",
    "scipy",
    "scikit-learn>=1.0.0",
    "tqdm",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "bitermplus.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bitermplus"]
exclude = ["tests"]

[project.optional-dependencies]
test = ["pytest"]
