[metadata]
name = bitermplus
version = 0.3.1
author = maximtrp
maintainer = Maksim Terpilowski
maintainer_email = maximtrp@gmail.com
description = Biterm Topic Model
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/maximtrp/bitermplus
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir = =src
install_requires =
    numpy
    cython
    pandas
    scipy

[options.packages.find]
where = src

[build_ext]
inplace=1
