[metadata]
name = bitermplus
version = attr: bitermplus.__version__
author = maximtrp
author_email = maximtrp@gmail.com
description = Biterm Topic Model
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/maximtrp/bitermplus
keywords = topic model, machine learning, nlp 
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: General

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir = =src
install_requires =
    numpy
    cython
    pandas
    scipy
    scikit-learn>=1.0.0
    tqdm

[options.packages.find]
where = src

[build_ext]
inplace=1
